--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/robertalanis/friend-finder#readme",
   "dependencies": {
+    "express": "^4.17.1",
     "path": "^0.12.7"
   }
 }
